Show a React Component

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
+    <h1>体重の遷移を示したグラフ</h1>
+    <div class="js-app"></div>
     <script src="./index.js"></script>
   </body>
 </html>
