--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,13 @@
-<html>
+<!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <title>体重の遷移を示したグラフ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="体重の遷移を示したグラフ">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kjirou.github.io/my-weight-transitions/">
+  </head>
   <body>
     <h1>体重の遷移を示したグラフ</h1>
     <div class="js-app"></div>
