--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
     <meta property="og:url" content="https://kjirou.github.io/my-weight-transitions/">
   </head>
   <body>
-    <h1>体重の遷移を示したグラフ</h1>
+    <h1>
+      <span>体重の遷移を示したグラフ</span>
+      <a href="https://github.com/kjirou/my-weight-transitions" style="font-size:0.5em;">GitHub</a>
+    </h1>
     <div class="js-app"></div>
     <script src="./index.js"></script>
   </body>
