--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>体重の遷移を示したグラフ</title>
+    <title>体重の推移を示したグラフ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="体重の遷移を示したグラフ">
+    <meta property="og:title" content="体重の推移を示したグラフ">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kjirou.github.io/my-weight-transitions/">
   </head>
   <body>
     <h1>
-      <span>体重の遷移を示したグラフ</span>
+      <span>体重の推移を示したグラフ</span>
       <a href="https://github.com/kjirou/my-weight-transitions" style="font-size:0.5em;">GitHub</a>
     </h1>
     <div class="js-app"></div>
