--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
       <a href="https://github.com/kjirou/my-weight-transitions" style="font-size:0.5em;">GitHub</a>
     </h1>
     <div class="js-app"></div>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
